<resources>
    <string name="app_name">Shop Quick Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="search_for_product">Search for a product...</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="description">Description</string>
    <string name="reviews">reviews</string>
    <string name="title">title</string>
    <string name="value">value</string>
    <string name="endsAt">ends at</string>
    <string name="created_at">created at</string>
    <string name="add_discount_code">Add discount code</string>
    <string name="code">Code</string>
    <string name="add">Add</string>
    <string name="processing">Processing...</string>
    <string name="edit_discount_code">Edit Discount</string>
    <string name="save_edit">Save Edit</string>
    <string name="create_product">Create Product</string>
    <string name="type">Type</string>
    <string name="vendor">Vendor</string>
    <string name="varient">Varient</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="add_variant">Add Variant</string>
    <string name="EGP">EGP</string>
    <string name="quantity">Quantity</string>
    <string name="value_in">Value</string>
    <string name="start_date">Start Date</string>
    <string name="edit_price_rule">Edit Price Rule</string>
    <string name="end_date">End Date</string>
    <string name="no_match_results">No Result matches</string>
    <string name="time">Time</string>
    <string name="edit_product">Edit Product</string>
    <string name="value_type">value type</string>
    <string name="discounts">Discounts</string>
    <string name="login">Admin Login</string>
    <string name="password">Password</string>
    <string name="price_rules">Price Rules</string>
    <string name="noInternetConnection">No Internet connection</string>

</resources>