<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rule_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="10dp"
    android:paddingBottom="@dimen/_5sdp"
    android:elevation="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">


        <TextView
            android:id="@+id/variant_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/varient"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/color_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/color"
            android:textColor="@color/black"
            android:drawableStart="@drawable/baseline_color_lens_24"
            android:drawableTint="@color/blue"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/variant_textview" />

        <TextView
            android:id="@+id/quantity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_7sdp"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:drawableTint="@color/blue"
            android:drawableStart="@drawable/quantity"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@id/size_textview"
            app:layout_constraintTop_toTopOf="@id/color_textview" />

        <TextView
            android:id="@+id/price_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:drawableStart="@drawable/baseline_attach_money_24"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp"
            android:drawableTint="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_textview" />


        <TextView
            android:id="@+id/size_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:text="@string/size"
            android:drawableTint="@color/blue"
            android:textColor="@color/black"
            android:drawableStart="@drawable/baseline_signal_cellular_alt_24"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toEndOf="@id/price_textview"
            app:layout_constraintTop_toBottomOf="@id/color_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>