<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rule_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:elevation="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/rule2"
            app:civ_border_width="@dimen/_1sdp"/>

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="195dp"
            android:maxLines="2"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/createdAt_textview"
            app:layout_constraintStart_toEndOf="@id/image"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp" />



        <TextView
            android:id="@+id/createdAt_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/created_at"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp" />

        <TextView
            android:id="@+id/value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_textview"
            app:layout_constraintStart_toStartOf="@id/title_textview"
            android:textColor="@color/lightBrown"
            android:text="@string/value"
            android:textStyle="bold|italic"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp" />

        <TextView
            android:id="@+id/endsAt_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/value_textview"
            app:layout_constraintStart_toStartOf="@id/title_textview"
            android:textColor="@color/black"
            android:text="@string/endsAt"
            android:textSize="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:inputType="textMultiLine"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>