<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rule_card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="10dp"
    android:elevation="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">


        <TextView
            android:id="@+id/variant_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/varient"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/delete_image"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/baseline_delete_24"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="-8dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/color_textLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/color"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/blue"
            app:errorEnabled="true"
            app:hintTextColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/variant_textview"
            app:startIconDrawable="@drawable/baseline_color_lens_24" >

        <AutoCompleteTextView
            android:id="@+id/color_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
            style="@style/Widget.AppTheme.TextInputEditText.Dense"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity_textLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/quantity"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/blue"
            app:errorEnabled="true"
            app:hintTextColor="@color/blue"
            app:startIconDrawable="@drawable/baseline_playlist_add_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_textLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_textLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/size"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/blue"
            app:errorEnabled="true"
            app:hintTextColor="@color/blue"
            app:startIconDrawable="@drawable/baseline_signal_cellular_alt_24"
            app:layout_constraintStart_toEndOf="@id/quantity_textLayout"
            app:layout_constraintTop_toBottomOf="@id/color_textLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_textLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/price"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/blue"
            app:errorEnabled="true"
            app:hintTextColor="@color/blue"
            app:startIconDrawable="@drawable/baseline_attach_money_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantity_textLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/currency_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/EGP"
            android:textColor="@color/blue"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_22sdp"
            app:layout_constraintStart_toEndOf="@id/price_textLayout"
            app:layout_constraintBottom_toBottomOf="@id/price_textLayout"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>