<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".products.presentation.createproduct.ui.CreateProductFragment">

    <!--    title-body-type-vendor-variant(size/color/price)-option-images-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_product"
        android:textSize="@dimen/_20sdp"
        android:fontFamily="@font/acme"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/orange"
        android:textStyle="italic|bold"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_add_photo_alternate_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_textLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:hint="Title"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/orange"
        app:errorEnabled="true"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/baseline_title_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_textLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:hint="@string/type"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/orange"
        app:errorEnabled="true"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/baseline_category_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_textLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/type_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vendor_textLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:hint="@string/vendor"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/orange"
        app:errorEnabled="true"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_textLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vendor_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_textLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:hint="@string/description"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/orange"
        app:errorEnabled="true"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/baseline_description_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vendor_textLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_textLayout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>