<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/discountCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="6dp"
    android:layout_gravity="center"
    tools:context="discounts.presentation.updatediscount.ui.UpdateDiscountFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="390dp"
        android:layout_height="@dimen/_180sdp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginStart="-30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <ImageView
                android:id="@+id/discount_imageView"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_edit_24"
                app:tint="@color/green" />


            <TextView
                android:id="@+id/title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/edit_discount_code"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/code"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/green"
            app:errorEnabled="true"
            app:hintTextColor="@color/green"
            app:startIconDrawable="@drawable/baseline_discount_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/save_edit"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>